...
                prefixIcon: Icon(Icons.search),
                border: OutlineInputBorder(),
              ),
              textInputAction: TextInputAction.search,
            ),
            SizedBox(height: 16),
            Text('Search Result', style: kHeading6),
            Builder(
              builder: (context) {
                if (searchType == SearchType.movie) {
                  return _SearchMovie();
                } else {
                  return _SearchTVSeries();
...
        if (state is SearchLoading) {
          return Center(child: CircularProgressIndicator());
        } else if (state is SearchHasData) {
          final result = state.movie;
          return Expanded(
            child: ListView.builder(
              key: const Key('search_movie_list'),
              padding: const EdgeInsets.all(8),
              itemBuilder: (context, index) {
                final movie = state.movie[index];
                return MovieCard(movie);
              },
              itemCount: result.length,
...
