...
      length: 2,
      child: Scaffold(
        appBar: AppBar(
          title: Text('Watchlist'),
          bottom: TabBar(
            tabs: [
              Tab(text: 'Movies'),
              Tab(text: 'TV Series'),
            ],
            dividerColor: Colors.white.withValues(alpha: 0.1),
          ),
        ),
        body: Padding(
...
